<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Page1">


    <NumberPicker
        android:id="@+id/typePicker"
        android:layout_width="247dp"
        android:layout_height="110dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="300dp"
        android:descendantFocusability="blocksDescendants"
        app:layout_constraintBottom_toBottomOf="@+id/pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </NumberPicker>

    <TextView
        android:id="@+id/selectType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectType"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <NumberPicker
        android:id="@+id/unitPicker"
        android:layout_width="247dp"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="700dp"
        android:descendantFocusability="blocksDescendants"
        android:minWidth="250dp"
        app:layout_constraintBottom_toBottomOf="@+id/pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </NumberPicker>

    <NumberPicker
        android:id="@+id/toUnit"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="700dp"
        android:descendantFocusability="blocksDescendants"
        android:minWidth="250dp"
        app:layout_constraintBottom_toBottomOf="@+id/pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </NumberPicker>

    <TextView
        android:id="@+id/convertFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertFrom"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <TextView
        android:id="@+id/convertTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convertTo"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="108dp"
        android:layout_height="59dp"
        android:text="@string/btnSave"
        android:textColor="@color/buttonText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>