<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Page2">

    <TextView
        android:id="@+id/typeInput"
        android:layout_width="154dp"
        android:layout_height="44dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167">

    </TextView>

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:text="@string/conversionLabel"
        android:textAlignment="center"
        android:textColor="@color/buttonText"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24">

    </TextView>

    <TextView
        android:id="@+id/convertLabel"
        android:layout_width="140dp"
        android:layout_height="47dp"
        android:text="@string/typeLabel"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163">

    </TextView>

    <TextView
        android:id="@+id/toUnit"
        android:layout_width="193dp"
        android:layout_height="83dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559">

    </TextView>

    <TextView
        android:id="@+id/fromUnit"
        android:layout_width="189dp"
        android:layout_height="84dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366">

    </TextView>

    <TextView
        android:id="@+id/toValue"
        android:layout_width="150dp"
        android:layout_height="68dp"
        android:background="@drawable/faded_rect"
        android:inputType="number"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        android:freezesText="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546">

    </TextView>

    <EditText
        android:id="@+id/fromValue"
        android:layout_width="150dp"
        android:layout_height="68dp"
        android:background="@drawable/rectangle"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358">

    </EditText>

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="110dp"
        android:layout_height="61dp"
        android:text="@string/Clear"
        android:textColor="@color/buttonText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/convertBtn"
        android:layout_width="149dp"
        android:layout_height="64dp"
        android:text="@string/convertBtn"
        android:textColor="@color/buttonText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="110dp"
        android:layout_height="61dp"
        android:text="@string/back"
        android:textColor="@color/buttonText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

</androidx.constraintlayout.widget.ConstraintLayout>